--- a/templates/empty.html
+++ b/templates/empty.html
@@ -15,14 +15,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Empty page - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
   <!-- CSS files -->
-  <link href="{{ url_for('static', filename='css/tabler.min.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/tabler.css') }}" rel="stylesheet" />
 </head>
 {% if userConfig['darkMode'] == True %}
 
 <body data-bs-theme="dark"> <!-- This controls light/dark theme-->
   {% else %}
 
-  <body>
+  <body data-bs-theme="light">
     {% endif %}
     <div class="page">
       <!-- Navbar -->
@@ -230,6 +230,29 @@
                 <h2 class="page-title">
                   Empty page
                 </h2>
+              </div>
+              <div class="alert alert-warning alert-dismissible" role="alert">
+                <div class="d-flex">
+                  <div style="padding-right: 12px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alert-triangle"
+                      width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                      stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path
+                        d="M10.24 3.957l-8.422 14.06a1.989 1.989 0 0 0 1.7 2.983h16.845a1.989 1.989 0 0 0 1.7 -2.983l-8.423 -14.06a1.989 1.989 0 0 0 -3.4 0z">
+                      </path>
+                      <path d="M12 9v4"></path>
+                      <path d="M12 17h.01"></path>
+                    </svg>
+                  </div>
+                  <div>
+                    <h4 class="alert-title">Do not attempt to reload this page!</h4>
+                    <div class="text-secondary">Reloading this page will break the backend. Currently trying to figure
+                      out a solution.</div>
+                  </div>
+                </div>
+                <a class="btn-close" data-bs-dismiss="alert" aria-label="close" style="filter: none;"></a>
+                <!-- BUG: The "filter: none" is to bypass the "X" button being not visible in dark mode. Visit Tabler Github Issue #1605 & #1607 for more information -->
               </div>
             </div>
           </div>
