added manual refresh and populate audio API list

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -97,11 +97,9 @@
                   <div class="row">
                     <div class="col-3">
                       <div class="mb-3">
-                        <div class="form-label">Interface</div>
+                        <div class="form-label">API</div>
                         <div class="col">
-                          <select class="form-select" id="AudioSetting_Interface">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
+                          <select class="form-select" id="AudioSetting_API">
                           </select>
                         </div>
                       </div>
