feat: added fetching for list of audio device

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -83,7 +83,7 @@
                   style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
                   <h3 class="card-title" style="margin-bottom: 0px;">Audio Settings</h3>
                   <a class="btn btn-icon" id="audioRefreshBtn" data-bs-toggle="tooltip" data-bs-placement="top"
-                    data-bs-original-title="Refresh">
+                    data-bs-original-title="Refresh Audio Device List">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24"
                       height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
