--- a/templates/empty.html
+++ b/templates/empty.html
@@ -117,11 +117,10 @@
                     </div>
                     <div class="col-2">
                       <div class="mb-3">
-                        <div class="form-label">Sample Rate</div>
+                        <div class="form-label">Default Sample Rate</div>
                         <div>
-                          <select class="form-select" id="AudioSetting_SampleRate">
+                          <select disabled class="form-select" id="AudioSetting_SampleRate">
                             <option value="1">1</option>
-                            <option value="2">2</option>
                           </select>
                         </div>
                       </div>
