clean up comments

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -133,7 +133,7 @@
                     </div>
                   </div>
                 </div>
-                <button class="btn" id="testButton">Button</button>
+                <button class="btn" id="startBtn">Start Whisper</button>
               </div>
             </div>
           </div>
