--- a/templates/empty.html
+++ b/templates/empty.html
@@ -76,87 +76,103 @@
         <div class="page-body">
           <div class="container-xl">
             <!-- Content here -->
-            <div class="card">
-              <div class="card-status-top bg-red"></div>
-              <div class="card-body">
-                <div class="flex-row"
-                  style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
-                  <h3 class="card-title" style="margin-bottom: 0px;">Audio Settings</h3>
-                  <a class="btn btn-icon" id="audioRefreshBtn" data-bs-toggle="tooltip" data-bs-placement="top"
-                    data-bs-original-title="Refresh Audio Device List">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24"
-                      height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                      stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
-                      <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
-                    </svg>
-                  </a>
-                </div>
-                <div class="container">
-                  <div class="row">
-                    <div class="col-3">
-                      <div class="mb-3">
-                        <div class="form-label">API</div>
-                        <div class="col">
-                          <select class="form-select" id="AudioSetting_API">
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="mb-3">
-                        <div class="form-label">Input Device</div>
-                        <div class="col">
-                          <select class="form-select" id="AudioSetting_InputDevice">
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-2">
-                      <div class="mb-3">
-                        <div class="form-label">Default Sample Rate</div>
-                        <div>
-                          <select disabled class="form-select" id="AudioSetting_SampleRate">
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-2">
-                      <div class="mb-3">
-                        <div class="form-label">No. of Channel</div>
-                        <div>
-                          <select class="form-select" id="AudioSetting_Channels">
-                          </select>
-                        </div>
-                      </div>
+            <div class="row row-cards">
+              <div class="col-12">
+                <div class="card">
+                  <div class="card-status-top bg-red"></div>
+                  <div class="card-header">
+                    <h3 class="card-title">Audio Settings</h3>
+                    <div class="card-actions">
+                      <a class="btn btn-icon" id="audioRefreshBtn" data-bs-toggle="tooltip" data-bs-placement="top"
+                        data-bs-original-title="Refresh Audio Device List">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24"
+                          height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                          stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
+                          <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
+                        </svg>
+                      </a>
                     </div>
                   </div>
-                </div>
-                <hr style="margin: 12px;" />
-                <div class="container">
-                  <div class="row align-items-center">
-                    <div class="col">
-                      <label class="form-label">Volume Threshold</label>
-                      <input id="slider_volThres" class="form-range mb-2" type="range" value="1500" min="0" max="32767"
-                        step="1">
+                  <div class="card-body">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-3">
+                          <div class="mb-3">
+                            <div class="form-label">API</div>
+                            <div class="col">
+                              <select class="form-select" id="AudioSetting_API">
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="mb-3">
+                            <div class="form-label">Input Device</div>
+                            <div class="col">
+                              <select class="form-select" id="AudioSetting_InputDevice">
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-2">
+                          <div class="mb-3">
+                            <div class="form-label">Default Sample Rate</div>
+                            <div>
+                              <select disabled class="form-select" id="AudioSetting_SampleRate">
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-2">
+                          <div class="mb-3">
+                            <div class="form-label">No. of Channel</div>
+                            <div>
+                              <select class="form-select" id="AudioSetting_Channels">
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-2">
-                      <input id="input_volThres" type="number" class="form-control md-1" value="1500" min="0"
-                        max="32767">
+                    <hr style="margin: 12px;" />
+                    <div class="container">
+                      <div class="row align-items-center">
+                        <div class="col">
+                          <label class="form-label">Volume Threshold</label>
+                          <input id="slider_volThres" class="form-range mb-2" type="range" value="1500" min="0"
+                            max="32767" step="1">
+                        </div>
+                        <div class="col-2">
+                          <input id="input_volThres" type="number" class="form-control md-1" value="1500" min="0"
+                            max="32767">
+                        </div>
+                        <div class="col">
+                          <label class="form-label">Voice Timeout (ms)</label>
+                          <input id="slider_voiceTimeout" class="form-range mb-2" type="range" value="1000" min="0"
+                            max="25000" step="500">
+                        </div>
+                        <div class="col-2">
+                          <input id="input_voiceTimeout" type="number" class="form-control md-1" value="1000" min="0"
+                            max="25000">
+                        </div>
+                      </div>
                     </div>
-                    <div class="col">
-                      <label class="form-label">Voice Timeout (ms)</label>
-                      <input id="slider_voiceTimeout" class="form-range mb-2" type="range" value="1000" min="0"
-                        max="25000" step="500">
-                    </div>
-                    <div class="col-2">
-                      <input id="input_voiceTimeout" type="number" class="form-control md-1" value="1000" min="0"
-                        max="25000">
-                    </div>
+                    <button class="btn" id="startBtn">Start Whisper</button>
                   </div>
                 </div>
-                <button class="btn" id="startBtn">Start Whisper</button>
+              </div>
+              <div class="col-12">
+                <div class="card">
+                  <div class="card-status-top bg-cyan"></div>
+                  <div class="card-header">
+                    <h3 class="card-title">bruh</h3>
+                  </div>
+                  <div class="card-body">
+
+                  </div>
+                </div>
               </div>
             </div>
           </div>
