--- a/templates/empty.html
+++ b/templates/empty.html
@@ -77,6 +77,7 @@
           <div class="container-xl">
             <!-- Content here -->
             <div class="row row-cards">
+              <!-- Card: Audio Settings -->
               <div class="col-12">
                 <div class="card">
                   <div class="card-status-top bg-red"></div>
@@ -163,14 +164,42 @@
                   </div>
                 </div>
               </div>
+              <!-- Card: General Settings -->
               <div class="col-12">
                 <div class="card">
                   <div class="card-status-top bg-cyan"></div>
                   <div class="card-header">
-                    <h3 class="card-title">bruh</h3>
+                    <h3 class="card-title">General Settings</h3>
+                    <div class="card-actions">
+                      <a class="btn" id="generalSettingsSave" style="margin-right: 4px;">
+                        <!-- TODO: implement function on js, popup notification on sucess/failure -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
+                          stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                          stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"></path>
+                          <path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                          <path d="M14 4l0 4l-6 0l0 -4"></path>
+                        </svg>
+                        Save
+                      </a>
+                      <a class="btn btn-outline-danger" id="generalSettingsReset">
+                        <!-- TODO: add danger modal -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
+                          stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                          stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
+                          <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
+                          <path d="M12 9l0 3"></path>
+                          <path d="M12 15l.01 0"></path>
+                        </svg>
+                        Reset
+                      </a>
+                    </div>
                   </div>
                   <div class="card-body">
-
+                    <!-- TODO: whisper model size, language, task, start whisper button, maybe the iframe? with the color settings? -->
                   </div>
                 </div>
               </div>
