html: added whisper model size

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -200,6 +200,28 @@
                   </div>
                   <div class="card-body">
                     <!-- TODO: whisper model size, language, task, start whisper button, maybe the iframe? with the color settings? -->
+                    <div class="container">
+                      <div class="row align-items-center">
+                        <div class="col">
+                          <label class="form-label">Whisper Model Size</label>
+                          <select class="form-select" id="GeneralSettings_WhisperModelSize">
+                            <option value="tiny">Tiny</option>
+                            <option value="base">Base</option>
+                            <option value="small">Small</option>
+                            <option value="medium">Medium</option>
+                            <option value="large">Large</option>
+                          </select>
+                        </div>
+                        <div class="col">
+                          <label class="form-label">Whisper Input Language</label>
+                          <select class="form-select" id="GeneralSettings_WhisperInputLanguage">
+                            <option value="en">English</option>
+                            <option value="zh">Chinese</option>
+                            <!-- TODO: Continue writing this -->
+                          </select>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
