html: added whisper task button group

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -316,6 +316,19 @@
                             <option value="su">Sundanese</option>
                           </select>
                         </div>
+                        <div class="col">
+                          <label class="form-label">Whisper Task</label>
+                          <div class="btn-group w-100" role="group">
+                            <input id="GeneralSettings_WhisperTask_Transcribe" class="btn-check" type="radio"
+                              name="btn-radio-basic" autocomplete="off" checked>
+                            <label class="btn" for="GeneralSettings_WhisperTask_Transcribe"
+                              type="button">Transcribe</label>
+                            <input id="GeneralSettings_WhisperTask_Translate" class="btn-check" type="radio"
+                              name="btn-radio-basic" autocomplete="off">
+                            <label class="btn" for="GeneralSettings_WhisperTask_Translate"
+                              type="button">Translate</label>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
