html: changed 'Start Whisper' button location
The app_config.ini doesn't like cases and empty lines, removed by ConfigParser automatically

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -160,7 +160,6 @@
                         </div>
                       </div>
                     </div>
-                    <button class="btn" id="startBtn">Start Whisper</button>
                   </div>
                 </div>
               </div>
@@ -171,6 +170,7 @@
                   <div class="card-header">
                     <h3 class="card-title">General Settings</h3>
                     <div class="card-actions">
+                      <a class="btn btn-primary" id="startBtn" style="margin-right: 12px;">Start Whisper</a>
                       <a class="btn" id="generalSettingsSave" style="margin-right: 4px;">
                         <!-- TODO: implement function on js, popup notification on sucess/failure -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
