js: added whisper settings components

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -171,7 +171,7 @@
                     <h3 class="card-title">Whisper Settings</h3>
                     <div class="card-actions">
                       <a class="btn btn-primary" id="startBtn" style="margin-right: 12px;">Start Whisper</a>
-                      <a class="btn" id="generalSettingsSave" style="margin-right: 4px;">
+                      <a class="btn" id="WhisperSettings_Save" style="margin-right: 4px;">
                         <!-- TODO: implement function on js, popup notification on sucess/failure -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                           stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
@@ -183,7 +183,7 @@
                         </svg>
                         Save
                       </a>
-                      <a class="btn btn-outline-danger" id="generalSettingsReset">
+                      <a class="btn btn-outline-danger" id="WhisperSettings_Reset">
                         <!-- TODO: add danger modal -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                           stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
