js: initial implmentation for reading user settings from html
Further implementation is required

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -320,10 +320,10 @@
                           <label class="form-label">Task</label>
                           <div class="btn-group w-100" role="group">
                             <input id="WhisperTask_Transcribe" class="btn-check" type="radio" name="WhisperTask"
-                              autocomplete="off" checked>
+                              autocomplete="off" value="transcribe" checked>
                             <label class="btn" for="WhisperTask_Transcribe" type="button">Transcribe</label>
                             <input id="WhisperTask_Translate" class="btn-check" type="radio" name="WhisperTask"
-                              autocomplete="off">
+                              autocomplete="off" value="translate">
                             <label class="btn" for="WhisperTask_Translate" type="button">Translate</label>
                           </div>
                         </div>
@@ -331,9 +331,9 @@
                           <label class="form-label">Use GPU</label>
                           <div class="btn-group w-100" role="group">
                             <input id="WhisperGPU_on" class="btn-check" type="radio" name="WhisperGPU"
-                              autocomplete="off" checked>
+                              autocomplete="off" value="on" checked>
                             <label class="btn" for="WhisperGPU_on" type="button">Enable</label>
-                            <input id="WhisperGPU_off" class="btn-check" type="radio" name="WhisperGPU"
+                            <input id="WhisperGPU_off" class="btn-check" type="radio" name="WhisperGPU" value="off"
                               autocomplete="off">
                             <label class="btn" for="WhisperGPU_off" type="button">Disable</label>
                           </div>
