--- a/templates/empty.html
+++ b/templates/empty.html
@@ -331,9 +331,9 @@
                           <label class="form-label">Use GPU</label>
                           <div class="btn-group w-100" role="group">
                             <input id="WhisperGPU_on" class="btn-check" type="radio" name="WhisperGPU"
-                              autocomplete="off" value="on" checked>
+                              autocomplete="off" value="true" checked>
                             <label class="btn" for="WhisperGPU_on" type="button">Enable</label>
-                            <input id="WhisperGPU_off" class="btn-check" type="radio" name="WhisperGPU" value="off"
+                            <input id="WhisperGPU_off" class="btn-check" type="radio" name="WhisperGPU" value="false"
                               autocomplete="off">
                             <label class="btn" for="WhisperGPU_off" type="button">Disable</label>
                           </div>
