--- a/templates/empty.html
+++ b/templates/empty.html
@@ -370,6 +370,19 @@
         </footer>
       </div>
     </div>
+    <div class="toast-container position-absolute bottom-0 end-0 p-3">
+      <div class="toast text-white bg-warning border-0" role="alert" id="toast_audioDeviceMissing" aria-live="assertive"
+        aria-atomic="true">
+        <div class="toast-header text-white bg-warning border-0">
+          <strong class="me-auto">Configuration Error!</strong>
+          <button type="button" class="me-0 btn-close btn-close-white" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+        <div class=" toast-body">
+          Please select an audio device.
+        </div>
+      </div>
+    </div>
     <!-- Libs JS -->
     <!-- Tabler Core -->
     <script src="{{ url_for('static', filename='js/tabler.min.js') }}" defer></script>
