feat: added color picker for stroke color

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -385,7 +385,8 @@
                         <div class="col">
                           <label class="form-label">Text Color</label>
                           <div>
-                            <input type="text" class="form-control d-block" id="colorpicker-1" value="#0054a6" />
+                            <!-- subs.style.setProperty("color", "TO THE COLOR YOU WANT") -->
+                            <input type="text" class="form-control d-block" id="colorpicker-1" value="#ffffff" />
                           </div>
                         </div>
                         <div class="col">
@@ -397,6 +398,8 @@
                         <div class="col">
                           <label class="form-label">Stroke Color</label>
                           <!-- TODO: color picker -->
+                          <!-- subs.style.setProperty("--stroke-color", "TO THE COLOR YOU WANT") -->
+                          <input type="text" class="form-control d-block" id="colorpicker-2" value="#fc5892" />
                         </div>
                         <div class="col">
                           <label class="form-label">Stroke Width</label>
