feat: added stroke color, text size, stroke width settings

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -385,8 +385,8 @@
                         <div class="col">
                           <label class="form-label">Text Color</label>
                           <div>
-                            <!-- subs.style.setProperty("color", "TO THE COLOR YOU WANT") -->
-                            <input type="text" class="form-control d-block" id="SubtitleSettings_TextColor" value="#ffffff" />
+                            <input type="text" class="form-control d-block" id="SubtitleSettings_TextColor"
+                              value="#ffffff" />
                           </div>
                         </div>
                         <div class="col">
@@ -398,9 +398,8 @@
                       <div class="row align-items-center">
                         <div class="col">
                           <label class="form-label">Stroke Color</label>
-                          <!-- TODO: color picker -->
-                          <!-- subs.style.setProperty("--stroke-color", "TO THE COLOR YOU WANT") -->
-                          <input type="text" class="form-control d-block" id="SubtitleSettings_StrokeColor" value="#fc5892" />
+                          <input type="text" class="form-control d-block" id="SubtitleSettings_StrokeColor"
+                            value="#fc5892" />
                         </div>
                         <div class="col">
                           <label class="form-label">Stroke Width</label>
