feat: added automatic retrieval of subtitle settings
The stroke width have also changed to stroke steps, as stroke width should not be changed

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -402,8 +402,8 @@
                             value="#fc5892" />
                         </div>
                         <div class="col">
-                          <label class="form-label">Stroke Width</label>
-                          <input type="number" class="form-control" id="SubtitleSettings_StrokeWidth" value="16"
+                          <label class="form-label">Stroke Steps</label>
+                          <input type="number" class="form-control" id="SubtitleSettings_strokeSteps" value="16"
                             min="0" />
                         </div>
                       </div>
