--- a/templates/empty.html
+++ b/templates/empty.html
@@ -402,7 +402,28 @@
                             value="#fc5892" />
                         </div>
                         <div class="col">
-                          <label class="form-label">Stroke Steps</label>
+                          <div class="row">
+                            <div class="col-3">
+                              <label class="form-label">Stroke Steps</label>
+                            </div>
+                            <div class="col-1">
+                              <svg xmlns="http://www.w3.org/2000/svg" id="SubtitleSettings_StrokeStepsWarningIcon"
+                                class="icon icon-tabler icon-tabler-alert-triangle" width="24" height="24"
+                                viewBox="0 0 24 24" stroke-width="2" stroke="orange" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round" visibility="hidden">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M12 9v4" />
+                                <path
+                                  d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0z" />
+                                <path d="M12 16h.01" />
+                              </svg>
+                            </div>
+                            <div class="col">
+                              <label id="SubtitleSettings_StrokeStepsWarningText" class="form-label"
+                                style="color: orange;" hidden>High step count
+                                might cause performance impact!</label>
+                            </div>
+                          </div>
                           <input type="number" class="form-control" id="SubtitleSettings_strokeSteps" value="16"
                             min="0" />
                         </div>
