--- a/templates/empty.html
+++ b/templates/empty.html
@@ -459,7 +459,7 @@
         </footer>
       </div>
     </div>
-    <div class="toast-container position-absolute bottom-0 end-0 p-3">
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
       <div class="toast text-white bg-warning border-0" role="alert" id="toast_audioDeviceMissing" aria-live="assertive"
         aria-atomic="true">
         <div class="toast-header text-white bg-warning border-0">
