feat: added font-family subs settings

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -393,6 +393,13 @@
                           <label class="form-label">Text Size</label>
                           <input type="number" class="form-control" id="SubtitleSettings_TextSize" value="48" min="0" />
                         </div>
+                        <div class="col">
+                          <label class="form-label">Text Font Family</label>
+                          <!-- Add like a question mark hover popup to advise user on how to use -->
+                          <!-- Request for font "xxx" blocked at visibility level 2 (requires 3): firefox fingerprint protection -->
+                          <input type="text" class="form-control" id="SubtitleSettings_TextFontFamily"
+                            placeholder="sans-serif" />
+                        </div>
                       </div>
                       <hr style="margin: 14px;">
                       <div class="row align-items-center">
