feat: added stroke width subs setting

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -389,7 +389,7 @@
                               value="#ffffff" />
                           </div>
                         </div>
-                        <div class="col">
+                        <div class="col-2">
                           <label class="form-label">Text Size</label>
                           <input type="number" class="form-control" id="SubtitleSettings_TextSize" value="48" min="0" />
                         </div>
@@ -414,8 +414,6 @@
                               </a>
                             </div>
                           </div>
-                          <!-- Add like a question mark hover popup to advise user on how to use -->
-                          <!-- Request for font "xxx" blocked at visibility level 2 (requires 3): firefox fingerprint protection -->
                           <input type="text" class="form-control" id="SubtitleSettings_TextFontFamily"
                             placeholder="sans-serif" />
                         </div>
@@ -426,6 +424,11 @@
                           <label class="form-label">Stroke Color</label>
                           <input type="text" class="form-control d-block" id="SubtitleSettings_StrokeColor"
                             value="#fc5892" />
+                        </div>
+                        <div class="col-2">
+                          <label class="form-label">Stroke Width</label>
+                          <input type="number" class="form-control" id="SubtitleSettings_StrokeWidth" value="4"
+                            min="0" />
                         </div>
                         <div class="col">
                           <div class="row">
