feat: added font weight subs setting

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -389,13 +389,13 @@
                               value="#ffffff" />
                           </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col">
                           <label class="form-label">Text Size</label>
                           <input type="number" class="form-control" id="SubtitleSettings_TextSize" value="48" min="0" />
                         </div>
                         <div class="col">
                           <div class="row">
-                            <div class="col-4">
+                            <div class="col">
                               <label class="form-label">Text Font Family</label>
                             </div>
                             <div class="col">
@@ -416,6 +416,20 @@
                           </div>
                           <input type="text" class="form-control" id="SubtitleSettings_TextFontFamily"
                             placeholder="sans-serif" />
+                        </div>
+                        <div class="col">
+                          <label class="form-label">Text Font Weight</label>
+                          <select class="form-select" id="SubtitleSettings_TextFontWeight">
+                            <option value="100">100</option>
+                            <option value="200">200</option>
+                            <option value="300">300</option>
+                            <option value="400">400 (Normal)</option>
+                            <option value="500">500</option>
+                            <option value="600">600</option>
+                            <option selected value="700">700 (Bold)</option>
+                            <option value="800">800</option>
+                            <option value="900">900</option>
+                          </select>
                         </div>
                       </div>
                       <hr style="margin: 14px;">
