--- a/templates/empty.html
+++ b/templates/empty.html
@@ -503,6 +503,17 @@
       </div>
     </div>
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div class="toast text-white bg-warning border-0" role="alert" id="toast_whisperStillRunning"
+        aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+        <div class="toast-header text-white bg-warning border-0">
+          <strong class="me-auto">Whisper still running!</strong>
+          <button type="button" class="me-0 btn-close btn-close-white" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+        <div class=" toast-body">
+          Please stop Whisper before unloading the page!
+        </div>
+      </div>
       <div class="toast text-white bg-warning border-0" role="alert" id="toast_audioDeviceMissing" aria-live="assertive"
         aria-atomic="true">
         <div class="toast-header text-white bg-warning border-0">
